[Chore] Commit before refractor